--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-deepstream",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "Deepstream Client for NodeRed",
 	"main": "deepstream.js",
 	"node-red" : {
@@ -19,7 +19,7 @@
 		"deepstream"
 	],
 	"dependencies": {
-		"deepstream.io": "^2.4.0"
+		"deepstream.io-client-js": "^2.4.0"
 	},
 	"author": "Julien Pal",
 	"license": "ISC"
