--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-deepstream",
-	"version": "1.0.9",
+	"version": "1.1.0",
 	"description": "Deepstream Client for NodeRed",
 	"main": "deepstream.js",
 	"node-red" : {
@@ -17,7 +17,7 @@
 		"deepstream"
 	],
 	"dependencies": {
-		"deepstream.io-client-js": "^2.2.0"
+		"deepstream.io-client-js": "2.1.1"
 	},
 	"author": "Julien Pal",
 	"license": "ISC"
