--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-deepstream",
-	"version": "1.1.15",
+	"version": "1.1.17",
 	"description": "Deepstream Client for NodeRed",
 	"main": "deepstream.js",
 	"node-red" : {
@@ -17,8 +17,7 @@
 		"deepstream"
 	],
 	"dependencies": {
-		"deepstream.io-client-js": "2.3.0",
-		"socket.io" : "1.7.4"
+		"deepstream.io-client-js": "2.1.1"
 	},
 	"author": "Julien Pal",
 	"license": "ISC"
